--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "client-install": "cd client && npm install",
-    "build": "cd client && npm run build",
     "start": "node server.js",
-    "server": "nodemon server.js",
+    "build": "cd client && npm run build",
+    "install-client": "cd client && npm install",
     "client": "cd client && npm start",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "dev": "concurrently \"node server.js\" \"npm run client\"",
     "heroku-postbuild": "npm run install-client and npm run build"
   },
   "author": "Debayan Debnath",
